# prism-agent/service/server/src/main/scala/io/iohk/atala/agent/server/http/marshaller/PresentProofApiMarshallerImpl.scala
@@ -8,17 +8,15 @@ import akka.http.scaladsl.unmarshalling.FromEntityUnmarshaller
 import io.iohk.atala.agent.openapi.model.*
 import io.iohk.atala.agent.openapi.api.PresentProofApiMarshaller
 
-// FIXME CLEANUP
 object PresentProofApiMarshallerImpl extends JsonSupport {
   val layer: ULayer[PresentProofApiMarshaller] = ZLayer.succeed {
     new PresentProofApiMarshaller {
 
       implicit def fromEntityUnmarshallerRequestPresentationInput: FromEntityUnmarshaller[RequestPresentationInput] =
         summon[RootJsonFormat[RequestPresentationInput]]
-      // implicit def fromEntityUnmarshallerSendPresentationInput: FromEntityUnmarshaller[SendPresentationInput] =
-      //   summon[RootJsonFormat[SendPresentationInput]]
-      implicit def toEntityMarshallerPresentationStatus: ToEntityMarshaller[PresentationStatus] =
-        summon[RootJsonFormat[PresentationStatus]]
+
+      implicit def toEntityMarshallerPresentationStatusarray: ToEntityMarshaller[Seq[PresentationStatus]] =
+        summon[RootJsonFormat[Seq[PresentationStatus]]]
       implicit def toEntityMarshallerRequestPresentationOutput: ToEntityMarshaller[RequestPresentationOutput] =
         summon[RootJsonFormat[RequestPresentationOutput]]
 
